Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120533

Various runtime warnings about Wayland text input

    XMLWordPrintable

Details

    • 615fffcfa (dev), 1867ef129 (6.7)

    Description

      Running various KDE applications on Wayland I get lots of Wayland text input warnings that look inactionable to me.

      For example any time I close a dialog I get

      qt.qpa.wayland.textinput: virtual void QtWaylandClient::QWaylandTextInputv3::zwp_text_input_v3_leave(wl_surface*) Got leave event for surface 0x0 focused surface 0x311c840
      

      Or when minimizing an app while a QFileDialog is open I get

      qt.qpa.wayland.textinput: virtual void QtWaylandClient::QWaylandTextInputv3::disableSurface(wl_surface*) for surface 0x21183a0 focused surface 0x0
      

      If these suggest application bugs the message should be more informative/actionable about what is wrong.

      If these messages are for debugging Qt they must not be qWarnings

      qtwayland f1c8366312240ce5bb5055d0fd70d5f82acf6fb3

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            inho Inho Lee
            nicolasfella Nicolas Fella
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes