TextInputV3: Remove unnecessary enableSurface/disableSurface

zwp_text_input_v3's enter/leave events are doing enable/disable
the surfaces.
enableSurface/disableSurface are called by setFocusObject and
it follows enter/leave.
These redundant routines are removed in TextInputV3

Fixes: QTBUG-120533
Change-Id: I080c67629d7cf9a9029414f5a0ea6735cfe4642a
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit 615fffcfaa13da7f5e819d0b39315c77e6ab1817)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>